# game_engine

./: .clang-format  .clang-tidy  .clangd  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  Makefile  Makefile-emscripten  README.md  Readme.md  _workspace.code-workspace  build-make.bat  build-vs2019.bat  build_engine.cmake  deps_vcpkg_x64-linux.txt  deps_vcpkg_x64-windows-dev.txt  deps_vcpkg_x64-windows.txt  premake5.lua  vcpkg-arm64-osx.txt  vcpkg-wasm32-emscripten.txt  vcpkg-x64-linux.txt  vcpkg-x64-mingw-static.txt  vcpkg-x64-osx.txt  vcpkg-x64-windows.txt  vcpkg.json  vcpkg_x32-emscripten.txt  vcpkg_x64-windows.txt  workspace.code-workspace
engine/: CMakeLists.txt  application.cpp  game_window.cpp  grid.hpp  imgui_setup.cpp  util_windows.hpp
engine/_backlog/maths/: ray.cpp
engine/_backlog/opengl/: 3d_renderer.cpp  3d_renderer.hpp  background.cpp  background.hpp  ray.cpp  ray.hpp  renderer_ray_traced.cpp  renderer_ray_traced.hpp  shadowmapping.hpp  skybox.cpp  texture_cube.cpp
engine/_backlog/terrain/: terrain.hpp
engine/_backlog/tilemap/: tilemap.cpp  tilemap.hpp
engine/_backlog/vfx/: particle_base.hpp  particle_system.hpp
engine/_todo/maths/: ray.cpp  ray.hpp
engine/_todo/terrain/: terrain.hpp
engine/_todo/tilemap/: tilemap.cpp  tilemap.hpp
engine/cmake/: build_info.cmake
engine/opengl/: render_command.hpp  util.cpp  util.hpp
engine/src/engine/: application.cpp  application.hpp  audio.cpp  audio.hpp  camera.cpp  camera.hpp  game_window.cpp  game_window.hpp  grid.hpp  imgui_setup.cpp  imgui_setup.hpp  input_manager.cpp  input_manager.hpp  maths.cpp  maths_core.cpp  maths_core.hpp  util.cpp  util.hpp  util_windows.cpp  util_windows.hpp
engine/test/: main.cpp
examples/game_2d/: CMakeLists.txt
examples/game_2d/_old/: 2d_game_object.cpp  2d_game_object.hpp  2d_lighting.cpp  2d_physics.hpp  2d_vfx.cpp  2d_vfx.hpp  ai.cpp  ai.hpp  collision_system.hpp  grid_system.hpp  input.hpp  old_tower_defense_game.hpp  physics_system.hpp  player.cpp  player.hpp  player_keys.hpp  screen_shake_system.hpp  update_velocity_system.hpp  weapons.cpp  weapons.hpp
examples/game_2d/src/: 2d_game_config.hpp  2d_game_logic.cpp  2d_game_logic.hpp  2d_game_object.cpp  2d_game_object.hpp  2d_game_state.hpp  2d_lighting.cpp  2d_lighting.hpp  (+31 more)
examples/hello_application/: CMakeLists.txt
experimental_networking/: CMakeLists.txt
experimental_networking/src/: main.cpp
game_2d/: CMakeLists.txt
game_2d/assets/: spritesheet.vert
game_2d/src/: breakout_game.hpp  main.cpp
game_3d/: CMakeLists.txt
game_3d/dlls/: GameNetworkingSockets.lib
game_3d/src/: game.cpp  game.hpp  game_state.hpp  main.cpp
game_defence/: CMakeLists.txt
game_defence/src/: actors.cpp  actors.hpp  example_function.hpp  game.cpp  game.hpp  game_state.hpp  main.cpp  optick.config.h
game_defence_tests/: CMakeLists.txt  vcpkg.json
game_defence_tests/components/: actors.cpp  events.hpp
game_defence_tests/src/: common.cpp  common.hpp  inventory.cpp  main.cpp  more_tests.cpp  movement.cpp  test_actor_patrol.hpp  test_physics.hpp
net_server/: CMakeLists.txt
net_server/src/: main.cpp  net_common.hpp
ray_tracing_one_weekend/: CMakeLists.txt
ray_tracing_one_weekend/src/: main.cpp
src/: CMakeLists.txt  audio_player.hpp  game.cpp  game.h  game.hpp  game_state.hpp  gui.cpp  gui.hpp  logo.hpp  main.cpp
src/3d/: assimp_obj_loader.cpp  assimp_obj_loader.h  camera.h  camera.hpp  fg_colour.hpp  fg_mesh.cpp  fg_mesh.hpp  fg_model.cpp  fg_model.hpp  fg_model_manager.h  fg_object.hpp  fg_texture.cpp  fg_texture.hpp  fg_transform.hpp  fg_vertex.hpp
src/app/: application.cpp  application.hpp  game_window.cpp  game_window.hpp  io.cpp  io.hpp  setup_imgui.cpp  setup_imgui.hpp
src/audio/: audio_player.hpp  components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
src/camera/: helpers.cpp  helpers.hpp
src/colour/: colour.cpp  colour.hpp
src/common/: circular_buffer.h  event_manager.h
src/engine/: application.cpp  application.hpp  colour.cpp  colour.hpp  game_window.cpp  imgui_setup.cpp  input.cpp  input.hpp  input_manager.hpp  util.cpp  util_windows.cpp
src/entities/: transform.h
src/entt/: helpers.hpp  serialize.cpp  serialize.hpp
src/events/: components.hpp  system.cpp  system.hpp
src/game/: create_entities.cpp  create_entities.hpp  game.cpp  game.hpp  game_tick.cpp  game_tick.hpp  main.cpp  simulate.cpp  simulate.hpp
src/graphics/: render_command.cpp  render_command.h  render_pass.h  renderer.cpp  renderer.h  renderer_api.cpp  renderer_api.h  shader.h  shapes.h  texture.cpp  texture.h  texture_manager.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
src/imgui/: helpers.cpp  helpers.hpp
src/input/: input_manager.h  keyboard_input.h
src/io/: file.cpp  path.cpp  path.hpp  settings.cpp  settings.hpp
src/lifecycle/: components.hpp  system.cpp  system.hpp
src/maths/: grid.cpp  grid.hpp  inverse_kinematics.cpp  maths.cpp  maths.hpp
src/networking/: chat_client.cpp  chat_client.hpp  chat_server.cpp  chat_server.hpp  network_settings.hpp  networking_common.cpp  networking_common.hpp
src/opengl/: framebuffer.cpp  render_command.cpp  render_command.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  util.cpp  util.hpp
src/physics/: components.hpp  helpers.cpp  helpers.hpp  physics_example.cpp  physics_example.hpp  process_actor_actor.cpp  process_actor_actor.hpp  process_actor_actor_collisions.cpp  process_move_objects.cpp  process_move_objects.hpp  system.cpp  system.hpp
src/renderer/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp  transform.hpp
src/resources/: audio.cpp  audio.hpp  colour.hpp  textures.cpp  textures.hpp
src/sprites/: components.hpp  helpers.cpp  helpers.hpp
src/tools/: profiler.cpp  profiler.hpp
src/ui_hierarchy/: helpers.hpp  system.hpp
src/ui_profiler/: components.hpp  helpers.cpp  helpers.hpp  system.cpp  system.hpp
src/util/: base.h  circular_buffer.h  profiler.hpp  queue.h  resource_manager.hpp  util_functions.cpp  util_functions.h
src/window/: game_window.cpp  game_window.h
(+2311 files in other folders)
